<resources>
    <string name="app_name">my simple layouts</string>
    <string name="spinner">my spinner</string>
    <string name="my_preference">shared preference</string>
    <string name="instructions_activation_deactivation">You can use this page to deactivate your account if it is currently active, or to reactivate your account if you previously deactivated it. in order to reactivate your account, you will need to verify your email address and reset your password.</string>
    <string name="background">Background</string>
    <string name="about">We\'ve updated our Terms of Use, Data Policy and Cookies Policy reflecting on our Fruits for Thought. We are continuing to offer the utmost service to our lovely users.</string>
    <string name="orange_summary">Orange is a round coloured citrus fruits that has a thick skin pilled before consumption.</string>
    <string name="mango_nutrition_fact">60 Calories, No fat or sodium, 3 grams of fibre, 12 grams of sugar, 1 gram of protein, 14 micro grams of vitamin A, 70 milligrams of vitamin C, 237 milligrams of potassium and 15.4 grams of carbohydrate.</string>
    <string name="orange_nutrition_fact">99 Calories, 2.6 grams of fibre, 22.5 grams of sugar, 0.6 grams, fat 1.4 gram of protein, adequate milligrams of vitamin A,B6, E, K, 70 milligrams of vitamin C, 237 milligrams of potassium and 24.7 grams of carbohydrate.</string>
    <string name="watermelon_summary">Watermelon is a large round flowering fruit with green rind and bright red flesh.</string>
    <string name="watermelon_nutritional_fact">30 Calories, 0.2g fat, 1 milligram of sodium, 0.4 grams of fibre, 6 grams of sugar, 0.6 gram of protein, 2 milligrams of vitamin B6, 13 milligrams of vitamin C, 112 milligrams of potassium and 8 grams of carbohydrate.</string>
    <string name="mango_summary">Mango is an edible stone fruit produced by the tropical tree Mangifera indica.</string>
    <string name="Pawpaw_summary">Pawpaw is a fruit with green skin, sweet yellow flesh and black seeds.</string>
    <string name="pawpaw_nutritional_fact">80 Calories, 1.2 gram fat, 1 milligram of sodium, 2.6 grams of fibre, 6 grams of sugar, 1.2 grams of protein, milligrams of vitamin B6, 18.3 milligrams of vitamin C, 345 milligrams of potassium and 18.8 grams of carbohydrate.</string>
    <string name="cucumber_summary">Cucumber is a widely cultivated creeping vine plant used as culinary vegetable.</string>
    <string name="Pineapple_summary">Pineapple is a large tropical fruit with a spiky tough skin and sweet inside.</string>
    <string name="pineapple_nutrition_fact">50 Calories, 0.1 gram fat, 1 milligram of sodium, 1.4 grams of fibre, 10 grams of sugar, 0.5 grams of protein, 12 milligrams of vitamin B6, 58.3 milligrams of vitamin C, 145 milligrams of magnesium and 18.8 grams of carbohydrate.</string>
    <string name="guava_summary">Guava is a tropical fruit that is grown in dry or humid heat. Both its fruit and leaves are edible.</string>
    <string name="guava_nutritional_fact">68 Calories, 0.3g fat, 2 milligram of sodium, 5 grams of fibre, 9 grams of sugar, 2.6 gram of protein, 5 milligrams of vitamin B6, 380 milligrams of vitamin C, 417 milligrams of potassium and 14 grams of carbohydrate.</string>
    <string name="banana_summary">Banana is an elongated edible fruit, produced by several kinds of large herbaceous.</string>
    <string name="banana_nutritional_fact">89 Calories, 0.3g fat, 1 milligram of sodium, 2.6 gram of fibre, 12 grams of sugar, 1.1 gram of protein, 20 milligrams of vitamin B6, 14 milligrams of vitamin C, 358 milligrams of potassium and 23 grams of carbohydrate.</string>

    <string name="apple_nutritional_fact">52 Calories, 0.2g fat, 1 milligram of sodium, 2.4 grams of fibre, 10 grams of sugar, 0.3 gram of protein, 5 milligrams of vitamin B6, 70 milligrams of vitamin C, 107 milligrams of potassium and 14 grams of carbohydrate.</string>
    <string name="please_sign_up">Please Sign Up</string>
    <string name="first_name">first name</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="last_name">Last name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="username">username</string>
    <string name="enter_username">Enter Username</string>
    <string name="password">password</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_in">Sign In</string>
    <string name="please_log_in">Please Log In</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="create_new_account">Create New Account</string>
    <string name="or">Or</string>
    <string name="deactivate_reactivate_account">deactivate / reactivate account</string>
    <string name="click_here">click here.</string>
    <string name="find_account">Find Account</string>
    <string name="to_reset_your_password_please_confirm">To reset your password, please confirm</string>
    <string name="your_account_first">your account first.</string>
    <string name="verify_email">Verify Email</string>
    <string name="select">Select</string>
    <string name="next">Next</string>
    <string name="pawpaw">PawPaw</string>
    <string name="pineapple">Pineapple</string>
    <string name="cucumber">Cucumber</string>
    <string name="mango">Mango</string>
    <string name="banana">Banana</string>
    <string name="apple">Apple</string>
    <string name="choose_one">Choose One!</string>

    <string name="guava">Guava</string>
    <string name="orange">Orange</string>
    <string name="pawpaw1">Pawpaw</string>
    <string name="pawpaw3">Pawpaw</string>
    <string name="nutrition_facts">Nutrition Facts</string>
    <string name="minus">-</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="price">Price</string>
    <string name="naira">₦</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="deactivate_reactivate">reactivate_deactivate</string>
    <string name="notifications">Notifications</string>
    <string name="apple_summary">Reliance Farm Industry welcome you to buy our Apple fresh fruits. It is a sweet edible fruit produced by an apple tree, it is widely cultivated in the farm. We are specialised in growing healthy fruits for consumers nutrition. We wish you a happy life!</string>
    <string name="description">Description</string>
    <string name="product_details">Product Details</string>
    <string name="nutritional_facts">Nutritional Facts:</string>
    <string name="watermelon">Watermelon</string>
    <string name="melon">Melon</string>
</resources>