<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_background"
    android:orientation="vertical"
    android:paddingTop="20dp"
    tools:context=".screens.ForgetPassword_page">

    <View
        android:id="@+id/arrow_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/ic_baseline_arrow_back_black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/find_account"
        android:textStyle="bold"
        android:textColor="#575252"
        android:textSize="30sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/to_reset_your_password_please_confirm"
        android:textStyle="bold"
        android:textColor="#575252"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/your_account_first"
        android:textStyle="bold"
        android:textColor="#575252"
        android:textSize="16sp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="5dp"
        android:gravity="center_vertical"
        android:text="@string/email_address"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="#575252"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/et_email_address"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="15dp"
        android:singleLine="true"
        android:gravity="center_vertical"
        android:hint="@string/enter_email_address"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:background="@drawable/edit_style"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:textColorHint="#888282"
        android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next_find_acct"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button_style"
        android:textStyle="bold"
        android:text="@string/verify_email"
        android:textColor="#B63E18"
        android:textAllCaps="false"
        android:textSize="16sp" />






</LinearLayout>