<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_background"
    android:orientation="vertical"
    android:paddingTop="20dp"
    tools:context=".screens.LogIn_page">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">



    <View
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="end"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="30dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/please_log_in"
        android:textStyle="bold"
        android:textColor="#575252"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="5dp"
            android:gravity="center_vertical"
            android:text="@string/email_address"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="#575252"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_email_address"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="15dp"
            android:singleLine="true"
            android:gravity="center_vertical"
            android:hint="@string/enter_email_address"
            android:background="@drawable/edit_style"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:paddingStart="16dp"
            android:textColorHint="#888282"
            android:textSize="16sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="5dp"
            android:gravity="center_vertical"
            android:text="@string/password"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="#575252"
            android:textSize="16sp" />

         <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="20dp"
             android:layout_marginStart="15dp"
            android:gravity="center_vertical"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
             android:drawableStart="@drawable/ic_baseline_lock_24"
             android:background="@drawable/edit_style"
             android:singleLine="true"
            android:paddingStart="16dp"
            android:textColorHint="#888282"
            android:textSize="16sp" />


    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_log_in"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button_style"
        android:textStyle="bold"
        android:text="@string/login"
        android:textColor="#B63E18"
        android:textAllCaps="false"
        android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="30dp">

                <TextView
                    android:id="@+id/tv_forget_password"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:textColor="#B63E18"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_marginStart="30dp"/>

                <TextView
                    android:id="@+id/tv_create_new_account"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/create_new_account"
                    android:textColor="#B63E18"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_marginEnd="20dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <View
                    android:layout_weight="2.5"
                    android:layout_width="100dp"
                    android:layout_height="1.5dp"
                    android:layout_marginStart="20dp"
                    android:layout_gravity=""
                    android:background="#575252" />

                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/or"
                    android:gravity="center_horizontal"
                    android:textColor="#575252"
                    android:textStyle="bold"/>


                <View
                    android:layout_weight="2.5"
                    android:layout_width="100dp"
                    android:layout_height="1.5dp"
                    android:layout_marginEnd="20dp"
                    android:background="#575252" />

            </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/deactivate_reactivate_account"
                android:layout_marginStart="20dp"
                android:textColor="#575252"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_acct_revival_destroy"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/click_here"
                android:layout_marginEnd="20dp"
                android:gravity="center_horizontal"
                android:textColor="#14EC1D"
                android:textStyle="bold"/>
        </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="150dp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>


