<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_background"
    android:orientation="vertical"
    android:paddingTop="20dp"
    tools:context=".screens.SignUp_page">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="40dp"
                    android:gravity="center"
                    android:text="@string/please_sign_up"
                    android:textStyle="bold"
                    android:textColor="#575252"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="20dp"
                    android:gravity="center_vertical"
                    android:text="@string/first_name"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textColor="#575252"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:drawableStart="@drawable/ic_baseline_account_box_24"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="15dp"
                    android:gravity="center_vertical"
                    android:hint="@string/enter_first_name"
                    android:inputType="textPersonName"
                    android:singleLine="true"
                    android:paddingStart="16dp"
                    android:background="@drawable/edit_style"
                    android:textColorHint="#888282"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="20dp"
                    android:gravity="center_vertical"
                    android:text="@string/last_name"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:textColor="#575252"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="15dp"
                    android:background="@drawable/edit_style"
                    android:gravity="center_vertical"
                    android:drawableStart="@drawable/ic_baseline_account_box_24"
                    android:hint="@string/enter_last_name"
                    android:singleLine="true"
                    android:inputType="textPersonName"
                    android:paddingStart="16dp"
                    android:textColorHint="#888282"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="20dp"
                    android:gravity="center_vertical"
                    android:text="@string/phone_number"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textColor="#575252"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginBottom="5dp"
                    android:drawableStart="@drawable/ic_baseline_call_24"
                    android:background="@drawable/edit_style"
                    android:gravity="center_vertical"
                    android:hint="@string/enter_phone_number"
                    android:singleLine="true"
                    android:inputType="number"
                    android:paddingStart="16dp"
                    android:textColorHint="#888282"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/email_address"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textColor="#575252"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/email_address"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/edit_style"
                    android:gravity="center_vertical"
                    android:hint="@string/enter_email_address"
                    android:drawableStart="@drawable/ic_baseline_email_24"
                    android:inputType="textEmailAddress"
                    android:paddingStart="16dp"
                    android:singleLine="true"
                    android:textColorHint="#888282"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/username"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textColor="#575252"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="15dp"
                    android:background="@drawable/edit_style"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:inputType="textPersonName"
                    android:drawableStart="@drawable/ic_baseline_account_box_24"
                    android:hint="@string/enter_username"
                    android:paddingStart="16dp"
                    android:textColorHint="#888282"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/password"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textColor="#575252"
                    android:textSize="16sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/enter_password"
                    app:startIconDrawable="@drawable/ic_baseline_lock_24"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="#3A3B47"
                    android:layout_marginEnd="20dp"
                    android:textColorHint="#888282"
                    android:layout_marginStart="15dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="15dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:inputType="textPassword"
                        android:background="@drawable/edit_style"/>


                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_sign_in"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/button_style"
                android:text="@string/sign_in"
                android:textColor="#B63E18"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:textSize="16sp" />

            <View
                android:layout_width="50dp"
                android:layout_height="100dp"/>




        </LinearLayout>
    </ScrollView>
</LinearLayout>



