<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/blue_background"
    tools:context=".screens.Activation_page">

    <View
        android:id="@+id/arrow_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/ic_baseline_arrow_back_black"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="Deactivate / Reactivate"
        android:textStyle="bold"
        android:textColor="#575252"
        android:textSize="25sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/instructions_activation_deactivation"
        android:textStyle="bold"
        android:textColor="#575252"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="5dp"
        android:gravity="center_vertical"
        android:text="@string/email_address"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="#575252"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/et_email_address"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="15dp"
        android:singleLine="true"
        android:gravity="center_vertical"
        android:hint="@string/enter_email_address"
        android:background="@drawable/edit_style"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:paddingStart="16dp"
        android:textColorHint="#888282"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_vertical"
        android:layout_marginTop="20dp"
        android:text="@string/deactivate_reactivate"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="#575252"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edit_style"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=""
            android:paddingStart="20dp"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            android:textColor="#575252"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_weight="1"
            android:layout_width="150dp"
            android:layout_marginEnd="20dp"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_log_in"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button_style"
        android:textStyle="bold"
        android:text="@string/next"
        android:textColor="#B63E18"
        android:textAllCaps="false"
        android:textSize="16sp" />



</LinearLayout>